fix: mobile first ad styles, prevent padding shift for mobile view

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2374,26 +2374,8 @@ a.banner:hover span {
 }
 
 /* Apply the following styles for unauthenticated readers */
-.ad-layout .post-full-content {
-    padding: 70px 0 0;
-}
-
-.ad-layout .post-and-sidebar {
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) 300px;
-    gap: 40px;
-    margin: 0 auto;
-}
-
-.ad-layout .sidebar {
-    display: flex;
-    max-width: 300px;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 .ad-layout .banner-ad {
-    display: block !important;
+    display: block;
 }
 
 .ad-layout .kg-width-wide .kg-image {
@@ -2409,13 +2391,23 @@ a.banner:hover span {
     display: none !important;
 }
 
-/* Hide sidebar for mobile readers */
-@media (max-width: 900px) {
+/* Display sidebar for desktop readers */
+@media (min-width: 900px) {
+    .ad-layout .post-full-content {
+        padding: 70px 0 0;
+    }
+
     .ad-layout .post-and-sidebar {
-        display: block;
+        display: grid;
+        grid-template-columns: minmax(0, 1fr) 300px;
+        gap: 40px;
+        margin: 0 auto;
     }
 
     .ad-layout .sidebar {
-        display: none;
+        display: flex;
+        max-width: 300px;
+        flex-direction: column;
+        justify-content: space-between;
     }
 }
